<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Spotifriends</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="button">Check Playing</string>
    <string name="backend_base_url">http://104.152.106.15:8080</string>
    <string name="fb_app_id">1398948947016016</string>
    <string name="sp_auth_button_log_in">Log in to Spotify</string>
    <string name="sp_auth_button_logged_in">Logged In</string>
    <string name="login_welcome">Welcome to Spotifriends</string>
    <string name="login_instructions">Jam with your friends at the speed of life.  It\'s musical
        chatrooms - for you, your friends, your followers, your community.  To use Spotifriends,
        you\'ll need a Spotify account and a Facebook account.  Please log in to each
        below to get started.</string>
    <string name="login_step_1">Step 1:</string>
    <string name="login_step_2">Step 2:</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="sp_token_cache_key">com.strockisdev.spotifriends.SP_TOKENCACHE_KEY</string>
    <string name="title_activity_no_connection">NoConnectionActivity</string>
    <string name="connection_lost">Connection Lost</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="network_preferences">Network</string>
    <string name="mobile_data_pref_title">Mobile Data Usage</string>
    <string name="mobile_data_pref_summary_true">Use Wi-Fi Only</string>
    <string name="mobile_data_pref_summary_false">Use Mobile Data or Wi-Fi</string>
    <string-array name="mobile_data_pref_list">
        <item>Use Wi-Fi Only</item>
        <item>Use Wi-Fi or Mobile Data</item>
    </string-array>
    <string-array name="mobile_data_pref_vals">
        <item>True</item>
        <item>False</item>
    </string-array>
    <string name="mobile_data_pref_dialog_title">Choose Network Setting</string>
    <string name="mobile_data_pref_vals_default">True</string>
    <string name="backend_token_path">/login/facebook</string>

</resources>
